k8s/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fikirsepeti-prod
  labels:
    app.kubernetes.io/part-of: fikirsepeti
